# oommfc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  conda_debug.ipynb  environment.yml  gui.py  history.org  index.ipynb  nbval.cfg  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  tasks.py  wrapdocker
.github/: environment.yml
.github/workflows/: conda.yml  docker-oommf.yml  oommf-from-master.yml  publish.yml  test.yml  tests.yml  workflow.yml
binder/: environment.yml  postBuild
dev/: 14-tutorial-periodic-boundary-conditions.ipynb  angle-hsv-plot.ipynb  dirname.ipynb  eigenmodes.ipynb  fixed-spins.ipynb  fixed-subregions.ipynb  hysteresis.ipynb  integrals.ipynb  mindriver-steps.ipynb  minsteps.ipynb  multiple-terms.ipynb  old-mkfile  parallel.ipynb  sine-hysteresis.ipynb  space-time-field.ipynb  subfields.ipynb  time-dependent-zeeman.ipynb  time-varying-field.ipynb
dev/bugs/: issue-18.ipynb
dev/plotting/: plotting-style.ipynb
docker/: Dockerfile
docs/: 00-getting-started-first-ubermag-notebook.ipynb  02-getting-started-hamiltonian.ipynb  02-tutorial-exchange.ipynb  03-getting-started-dynamics.ipynb  04-getting-started-current-induced-dw-motion.ipynb  04-tutorial-dmi.ipynb  05-getting-started-exercise-dw-pair-conversion.ipynb  06-getting-started-exercise-vortex-dynamics.ipynb  07-tutorial-standard-problem3.ipynb  08-tutorial-standard-problem4.ipynb  09-tutorial-standard-problem5.ipynb  10-tutorial-standard-problem-fmr.ipynb  11-tutorial-deriving-fields.ipynb  12-tutorial-stray-field.ipynb  13-tutorial-skyrmion.ipynb  Makefile  api-reference.rst  cgevolver.rst  compute.rst  conf.py  controlling-default-runner.ipynb  cubicanisotropy.ipynb  cubicanisotropy.rst  damping.rst  delete.rst  demag.rst  dirname.ipynb  dmi.ipynb  dmi.rst  dynamics.rst  environment.yml  eulerevolver.rst  evolvers.rst  exchange.ipynb  exchange.rst  finite-temperature.ipynb  getting-started.rst  hamiltonian.rst  index.rst  mesh.rst  (+20 more)
docs/_templates/: class-template.rst  module-template.rst
docs/incomplete_ipynb/: skyrmion.ipynb
docs/ipynb/: 00-getting-started-first-ubermag-notebook.ipynb  00-tutorial-installation-testing-upgrade.ipynb  01-getting-started-geometry.ipynb  01-tutorial-zeeman.ipynb  02-getting-started-hamiltonian.ipynb  02-tutorial-exchange.ipynb  03-getting-started-dynamics.ipynb  03-tutorial-uniaxialanisotropy.ipynb  04-getting-started-current-induced-dw-motion.ipynb  04-tutorial-dmi.ipynb  05-getting-started-exercise-dw-pair-conversion.ipynb  05-tutorial-cubicanisotropy.ipynb  06-getting-started-exercise-vortex-dynamics.ipynb  06-tutorial-spatially-varying-parameter.ipynb  07-tutorial-standard-problem3.ipynb  08-tutorial-standard-problem4.ipynb  09-tutorial-other.ipynb  09-tutorial-standard-problem5.ipynb  10-tutorial-standard-problem-fmr.ipynb  11-tutorial-deriving-fields.ipynb  12-tutorial-stray-field.ipynb  13-tutorial-skyrmion.ipynb  14-tutorial-periodic-boundary-conditions.ipynb  15-tutorial-other.ipynb  acknowledgements.ipynb  advanced-installation.ipynb  controlling-default-runner.ipynb  derived_fields.ipynb  docker-simulations.ipynb  dw_skyrmion_conversion.ipynb  exporting-data.ipynb  finite-temperature.ipynb  first_oommfc_notebook.ipynb  fmr_standard_problem.ipynb  how-to-cite.ipynb  index.ipynb  installation-testing-update.ipynb  installation.ipynb  micromagneticmodel.ipynb  multiple-terms.ipynb  (+22 more)
example/: oommfc GUI Example.ipynb
oommfc/: __init__.py  atlases.py  compute.py  data.py  delete.py  drivers.py  energies.py  evolvers.py  gui.py  mesh.py  meshes.py  oommf.py  sim.py  system.py  util.py
oommfc/_output_collecting_util/: __init__.py  oommfdrive.py  read_table.py
oommfc/consts/: __init__.py
oommfc/drivers/: __init__.py  driver.py  hysteresisdriver.py  mindriver.py  steppingdriver.py  timedriver.py
oommfc/dynamics/: __init__.py  damping.py  dynamics.py  precession.py  stt.py  zhangli.py
oommfc/energies/: __init__.py  anisotropy.py  demag.py  exchange.py  zeeman.py
oommfc/evolvers/: __init__.py  cgevolver.py  eulerevolver.py  rungekuttaevolver.py  spintevolver.py  spinxferevolver.py  uhh_thetaevolver.py  xf_thermheunevolver.py  xf_thermspinxferevolver.py
oommfc/examples/: __init__.py  bar.py  examples.py  macrospin.py
oommfc/hamiltonian/: __init__.py  anisotropy.py  cubicanisotropy.py  demag.py  dmi.py  exchange.py  hamiltonian.py  uniaxialanisotropy.py  zeeman.py
oommfc/issues/13/: issue-better-error.ipynb
oommfc/oommf/: __init__.py  oommf.py  progress.py  progressbar.py
oommfc/script/: __init__.py  energies.py  mesh.py  system.py  util.py
oommfc/scripts/: __init__.py  driver.py  energies.py  energy.py  evolver.py  mesh.py  system.py  util.py
oommfc/tests/: conftest.py  magnetoelastic.py  no_docker_running_raises_error.py  stdprob5.py  tdrivers.py  test_anisotropy.py  test_atlases.py  test_compute.py  test_consts.py  test_cubicanisotropy.py  test_damping.py  test_demag.py  test_derive.py  test_dmi.py  test_driver.py  test_dynamics.py  test_energy.py  test_evolvers.py  test_examples.py  test_exchange.py  test_gui.py  test_hamiltonian.py  test_hysteresisdriver.py  test_info_file.py  test_init.py  test_magnetoelastic.py  test_mesh.py  test_meshes.py  test_micromagnetictests.py  test_mindriver.py  test_multiple_drives.py  test_multiple_runs.py  test_no_docker_running_raises_error.py  test_oommf.py  test_oommf_overhead.py  test_performance.py  test_platform_version.py  test_precession.py  test_save_delete.py  test_sim.py  (+16 more)
oommfc/tests/test_files/: m0.omf  test_oommf.mif
oommfc/tests/test_sample/: m0.omf  test_oommf.mif
oommfc/util/: __init__.py  util.py
